--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "os-locale-s-fix",
-  "version": "1.0.8-fix",
+  "version": "1.0.8-fix-1",
   "description": "Its a light weight version that minimizes the dependency module of `os-locale`",
   "private": false,
   "main": "./cjs/index.js",
